--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="container">
 
                 <a class="navbar-brand" href="#"> 
-                    <img  src="img/2x/Ativo 1@2x.png" height="40px" width="auto" alt="">
+                    <img  src="img/" height="40px" width="auto" alt="">
                     <span class="ml-3">Tecnologia & Design</span>
                 </a>
 
@@ -144,7 +144,7 @@
             <div class="row">
                 <div class="col-md-6">
 
-                    <img src="img/juros.png" class="img-fluid" alt="">
+                    <img src="img/LOGO.png" class="img-fluid" alt="">
 
                 </div>
 
