--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div class="container">
 
                 <a class="navbar-brand" href="#"> 
-                    <img  src="img/" height="40px" width="auto" alt="">
+                    <img  src="img/LOGO.png" height="40px" width="auto" alt="">
+                    <img  src="img/LOGOTIPO.png" height="40px" width="auto" alt="">
                     <span class="ml-3">Tecnologia & Design</span>
                 </a>
 
