--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
             <div class="container">
 
                 <a class="navbar-brand" href="#"> 
-                    <img  src="img/LOGO.png" height="40px" width="auto" alt="">
-                    <img  src="img/LOGOTIPO.png" height="40px" width="auto" alt="">
+                    <img src="img/LOGO.png" height="40px" width="auto" alt="">
+
+
+
+                    <img style="margin-left: 15px;" src="img/LOGOTIPO.png" height="40px" width="auto" alt="">
                     <span class="ml-3">Tecnologia & Design</span>
                 </a>
 
