--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 
 
-                    <img style="margin-left: 15px;" src="img/LOGOTIPO.png" height="40px" width="auto" alt="">
-                    <span class="ml-3">Tecnologia & Design</span>
+                    <img style="margin-left: 15px;" src="img/LOGOTIPO.png" height="40px" width="auto" alt="logotipo CMYK - Business Design">
+                    
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
