--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <!--DIV COM OS ÍCONES DE REDES SOCIAIS DO RODAPÉ-->
                 <div class="col-md-4 d-flex justify-content-md-end">
 
-                    <a class="text-light" href="https://www.facebook.com/cmyk.md"><i class="fa-brands fa-facebook ml-3 fa-xl"></i></a>
+                    <a  href="https://www.facebook.com/cmyk.md"><i class="fa-brands fa-facebook ml-3 fa-xl"></i></a>
 
                     <a class="text-light" href="https://www.instagram.com/cmyk.md/"><i class="fa-brands fa-instagram ml-3 fa-xl"></i></a>
 
