--- a/index.html
+++ b/index.html
@@ -276,18 +276,18 @@
                 <!--DIV COM OS ÍCONES DE REDES SOCIAIS DO RODAPÉ-->
                 <div class="col-md-4 d-flex justify-content-md-end">
 
-                    <a  href="https://www.facebook.com/cmyk.md"><i class="fa-brands fa-facebook ml-3 fa-xl"></i></a>
+                    <a class="text-dark" href="https://www.facebook.com/cmyk.md"><i class="fa-brands fa-facebook ml-3 fa-xl"></i></a>
 
-                    <a class="text-light" href="https://www.instagram.com/cmyk.md/"><i class="fa-brands fa-instagram ml-3 fa-xl"></i></a>
+                    <a class="text-dark" href="https://www.instagram.com/cmyk.md/"><i class="fa-brands fa-instagram ml-3 fa-xl"></i></a>
 
-                    <a class="text-light" href="https://www.behance.net/kaciel-aires?isa0=1"><i class="fa-brands fa-behance ml-3 fa-xl"></i></a>
+                    <a class="text-dark" href="https://www.behance.net/kaciel-aires?isa0=1"><i class="fa-brands fa-behance ml-3 fa-xl"></i></a>
 
-                    <a class="text-light" href="https://github.com/Kaciel"><i class="fa-brands fa-github ml-3 fa-xl "></i></a>
+                    <a class="text-dark" href="https://github.com/Kaciel"><i class="fa-brands fa-github ml-3 fa-xl "></i></a>
 
-                    <a class="text-light" href="https://www.linkedin.com/in/kaciel-aires-614903177/"><i class="fa-brands fa-linkedin ml-3 fa-xl"></i></a>
+                    <a class="text-dark" href="https://www.linkedin.com/in/kaciel-aires-614903177/"><i class="fa-brands fa-linkedin ml-3 fa-xl"></i></a>
                     
 
-                    <a class="text-light" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp ml-3 fa-xl"></i></a>
+                    <a class="text-dark" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp ml-3 fa-xl"></i></a>
 
                 </div>
 
