--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     <a class="text-dark" href="https://www.linkedin.com/in/kaciel-aires-614903177/"><i class="fa-brands fa-linkedin ml-3 fa-xl"></i></a>
                     
 
-                    <a class="text-dark" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp ml-3 fa-xxl"></i></a>
+                    <a class="text-dark" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp ml-3 fa-xl"></i></a>
 
                 </div>
 
