--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a class="nav-link" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-success ml-md-3" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp fa-lg"></i></a>
+                            <a class="nav-link" href="https://api.whatsapp.com/send?phone=+5511910383280"><img style="width: 8em;" src="botão contato.png" alt=""></a>
                         </li>
                     </ul>
 
