--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
 
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                        <a class="nav-link link:hover-success" href="#home">Home <span class="sr-only">Menu</span></a>
+                        <a class="nav-link link:hover-success" href="#home">HOME <span class="sr-only">Menu</span></a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#Trabalho">Design</a>
+                        <a class="nav-link" href="#Trabalho">MEU TRABALHO</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#Portfolio">Tecnologia</a>
+                        <a class="nav-link" href="#Portfolio">TECNOLOGIA</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="#">BLOG</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://api.whatsapp.com/send?phone=+5511910383280"><img style="width: 8em;" src="botão contato.png" alt=""></a>
