--- a/index.html
+++ b/index.html
@@ -247,6 +247,41 @@
     
     </section>    
 
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img class="d-block w-100" src="HOME.png" alt="Primeiro Slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="P1.png" alt="Segundo Slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="P2.png" alt="Terceiro Slide">
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Anterior</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Próximo</span>
+                        </a>
+                      </div>
+                </div>
+
+                <div class="col-md-4">
+
+                </div>
+               
+            </div>
+        </div>
+    </section>
+
 
 
      <!--INÍCIO DO RODAPÉ-->
