--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a class="nav-link" href="#">BLOG</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://api.whatsapp.com/send?phone=+5511910383280"><img style="width: 8em;" src="botão contato.png" alt=""></a>
+                            <a class="nav-link" href="https://api.whatsapp.com/send?phone=+5511910383280"><img style="width: 8em; margin-left: 15px;" src="botão contato.png" alt=""></a>
                         </li>
                     </ul>
 
@@ -279,6 +279,11 @@
                 </div>
                
             </div>
+            
+            <iframe>
+                <link rel="import" href="https://www.behance.net/kaciel-aires">
+            </iframe>
+
         </div>
     </section>
 
