--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
                 </button>
 
-                <div class="collapse navbar-collapse" id="navbarNav">
-
-                    <ul class="navbar-nav ml-auto">
+                <div class="collapse navbar-collapse " id="navbarNav">
+                    
+                    <ul class="navbar-nav ml-auto ">
                         <li class="nav-item">
                         <a class="nav-link link:hover-success" href="#home">HOME <span class="sr-only">Menu</span></a>
                         </li>
@@ -63,8 +63,8 @@
                         <li class="nav-item">
                         <a class="nav-link" href="#">BLOG</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://api.whatsapp.com/send?phone=+5511910383280"><img style="width: 8em; margin-left: 15px;" src="botão contato.png" alt=""></a>
+                        <li class="nav-item align-self-center">
+                            <a class="nav-link" href="https://api.whatsapp.com/send?phone=+5511910383280"><img style="width: 5em; margin-left: 15px;" src="botão contato.png" alt=""></a>
                         </li>
                     </ul>
 
@@ -87,12 +87,12 @@
                     <div class="align-self-center">
                         <h1 class="display-4"><strong>Kaciel Aires</strong> </h1>
                         <br>
-                        <h1 class="display-5">
+                        <h1 class="display-5 bg-light text-dark p-2">
                             <strong>Tecnologia muda tudo!</strong>
                         </h1>
                         <br>
                         <p>
-                            <h4>Um mundo melhor começa com 
+                            <h4 class="bg-light text-dark p-2">Um mundo melhor começa com 
                                 um sonho e a tecnologia pode nos 
                                 ajudar a alcançar esse sonho
                             </h4>
