--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
                 <!--INÍCIO DOS TEXTOS DA SEÇÃO HOME-->
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
-                        <h1 class="display-4"><strong>Kaciel Aires</strong> </h1>
+                        <h1 class="display-4 corrochotexto"><strong>Kaciel Aires</strong> </h1>
                         <br>
-                        <h1 class="display-5 bg-light text-dark p-2">
+                        <h1 class="display-5 corverdetexto p-2">
                             <strong>Tecnologia muda tudo!</strong>
                         </h1>
                         <br>
                         <p>
-                            <h4 class="bg-light text-dark p-2">Um mundo melhor começa com 
+                            <h4 class="corverdetexto text-light p-2">Um mundo melhor começa com 
                                 um sonho e a tecnologia pode nos 
                                 ajudar a alcançar esse sonho
                             </h4>
@@ -107,7 +107,7 @@
                 <!--INÍCIO DO LADO DA HOME ONDE FICA A IMAGEM-->
 
                 <div class="col-md-6 d-none d-md-block">
-                    <img class="img-fluid" src="img/Eu-de-terno-azul-web.png" alt="">
+                    <img class="img-fluid" src="img/IMG EU HOME VERDE.png" alt="">
                 </div>
 
                  <!--FIM DO LADO DA HOME ONDE FICA A IMAGEM-->
